# fn_graph

./: .gitignore  .readthedocs.yml  README.md  README.rst  pyproject.toml  setup.py
.github/workflows/: pythonapp.yml
docs/source/: conf.py  fn_graph.rst  index.rst  modules.rst  requirements.txt  usage.md
fn_compose/: __init__.py  example.py
fn_graph/: __init__.py  caches.py  calculation.py  example.py  profiler.py  usage.py
fn_graph/examples/: broken.py  caching.py  car_savings.py  credit.py  credit_data.csv  finance.py  machine_learning.py  namespaces.py  plotting.py  share_prices.csv  shares_in_issue.csv  simple.py  stock_market.py
fn_graph/tests/: large_graph.py  test_basics.py  test_cache_methods.py  test_large_graph.py  test_links.py  test_random_graph.py  utils.py
