[tool.poetry]
name = "fn_graph"
version = "0.1.2"
description = "Manage, maintain and reuse complex function graphs without the hassle."
authors = ["James Saunders <james@businessoptics.biz>"]
license = "MIT"
readme = "README.md"
documentation="https://fn-graph.readthedocs.io/"
repository="https://github.com/BusinessOptics/fn_graph"
homepage="https://github.com/BusinessOptics/fn_graph"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4"
graphviz = "^0.13.2"
littleutils = "^0.2.1"
typing = "^3.7"
joblib = "^0.14.1"

[tool.poetry.dev-dependencies]
pandas = "^0.25.3"
black = {version = "^18.3-alpha.0", allows-prereleases = true}
pytest = "^5.3"
sphinx = "^2.2"
mkdocs = "^1.0"
sphinx_rtd_theme = "^0.4.3"
recommonmark = "^0.6.0"
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
