[tool.poetry]
name = "fn_graph"
version = "0.10.1"
description = "Manage, maintain and reuse complex function graphs without the hassle."
authors = ["James Saunders <james@businessoptics.biz>"]
license = "MIT"
readme = "README.md"
documentation="https://fn-graph.readthedocs.io/"
repository="https://github.com/BusinessOptics/fn_graph"
homepage="https://github.com/BusinessOptics/fn_graph"

[tool.poetry.dependencies]
python = "^3.7"
networkx = "^2.4"
graphviz = "^0.13.2"
littleutils = "^0.2.1"

# below `extras`. They can be opted into for examples.
seaborn = { version ="^0.10.0", optional = true }
statsmodels = { version ="^0.11.1", optional = true }
matplotlib = { version ="^3.0", optional = true }
sklearn = { version ="^0.0", optional = true }
plotly = { version ="^4.0", optional = true }
pandas = { version ="^0.25.3", optional = true }

[tool.poetry.dev-dependencies]

black = {version = "^18.3-alpha.0", allow-prereleases = true}
pytest = "^5.3"
sphinx = "^2.2"
mkdocs = "^1.0"
sphinx_rtd_theme = "^0.4.3"
recommonmark = "^0.6.0"

[tool.poetry.extras]
examples = ["seaborn", "statsmodels", "matplotlib", "sklearn", "plotly", "pandas"]

[tool.dephell.main]
from = {format = "poetry", path = "pyproject.toml"}
to = {format = "setuppy", path = "setup.py"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
